Account controller updated